[gd_scene load_steps=5 format=3 uid="uid://ciith8xm4fqln"]

[ext_resource type="Texture2D" uid="uid://v14yruqy43if" path="res://sprites/expatlol.png" id="1_vr67e"]
[ext_resource type="Script" uid="uid://bg40okyuio5l0" path="res://scripts/enemy.gd" id="1_vs78y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vs78y"]
size = Vector2(120, 104)

[sub_resource type="CircleShape2D" id="CircleShape2D_vs78y"]
radius = 59.0339

[node name="Node2D" type="Node2D"]
script = ExtResource("1_vs78y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4.6875, 4.6875)
texture = ExtResource("1_vr67e")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, 2)
shape = SubResource("RectangleShape2D_vs78y")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="patron" type="Timer" parent="."]
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CircleShape2D_vs78y")

[node name="goto" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="patron" to="." method="_on_patron_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="goto" to="." method="_on_goto_timeout"]
